# supabase-rs-utils

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  index.html  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-repo/: action.yaml
.github/workflows/: audit.yaml  check.yaml  conventional-pr.yaml  deny.yaml  doc.yaml  release-plz.yaml  release-plz.yml  test.yaml  unused-deps.yaml
crates/examples/: Cargo.toml
crates/examples/src/: auth_example.rs  broadcast_example.rs  client_example.rs  jwt_stream_example.rs  realtime_example.rs
crates/postgrest-error/: CHANGELOG.md  Cargo.toml  README.md
crates/postgrest-error/src/: lib.rs
crates/supabase-auth/: CHANGELOG.md  Cargo.toml  README.md
crates/supabase-auth/examples/: auth_example.rs
crates/supabase-auth/src/: auth_client.rs  error.rs  jwt_expiry.rs  jwt_stream.rs  lib.rs  types.rs
crates/supabase-auth/src/auth_client/: mod.rs  requests.rs
crates/supabase-client/: CHANGELOG.md  Cargo.toml  README.md
crates/supabase-client/examples/: crud.rs
crates/supabase-client/src/: error.rs  lib.rs
crates/supabase-client/src/client/: authenticated.rs  mod.rs  unauthenticated.rs
crates/supabase-fixture/supabase/migrations/: 20240903163000_users.sql  20240903163112_posts.sql  20240903163117_comments.sql
crates/supabase-mock/: CHANGELOG.md  Cargo.toml
crates/supabase-mock/src/: lib.rs
crates/supabase-realtime/: CHANGELOG.md  Cargo.toml  README.md
crates/supabase-realtime/examples/: example1.rs
crates/supabase-realtime/src/: connection.rs  error.rs  lib.rs  main.rs  message.rs  realtime.rs
examples/: Cargo.toml  README.md  index.html
examples/src/: auth_example.rs  broadcast_example.rs  client_example.rs  db_updates_example.rs  jwt_stream_example.rs  lib.rs  presence_example.rs
supabase/: config.toml  seed.sql
supabase-fixture/supabase/: config.toml  seed.sql
supabase/migrations/: 20240903163000_initial.sql
xtask/: Cargo.toml
xtask/src/: main.rs
