cargo-features = ["codegen-backend"]
[workspace]
resolver = "2"
members = ["crates/*", "xtask"]

[workspace.lints.clippy]
cargo = { priority = -1, level = "deny" }
complexity = { priority = -1, level = "deny" }
correctness = { priority = -1, level = "deny" }
nursery = { priority = -1, level = "deny" }
pedantic = { priority = -1, level = "deny" }
perf = { priority = -1, level = "deny" }
restriction = { priority = -1, level = "deny" }
style = { priority = -1, level = "deny" }
suspicious = { priority = -1, level = "deny" }

cargo_common_metadata = "allow"
missing_docs_in_private_items = "allow"
blanket_clippy_restriction_lints = "allow"
implicit_return = "allow"
dbg_macro = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
missing_trait_methods = "allow"
wildcard_imports = "allow"
shadow_reuse = "allow"
exhaustive_enums = "allow"
ref_patterns = "allow"
pub_use = "allow"
single_char_lifetime_names = "allow"
multiple_crate_versions = "allow"
exhaustive_structs = "allow"
future_not_send = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"

[workspace.dependencies]
# our cretes
supabase-mock = { path = "crates/supabase-mock" }
supabase-auth = { path = "crates/supabase-auth" }
postgrest-error = { path = "crates/postgrest-error" }
supabase-realtime = { path = "crates/supabase-realtime" }

# Async
futures-concurrency = "7.4"
futures-util = "0.3"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] } # todo: remove "full"
pin-project = "1"
futures-timer = "3"
tokio-stream = "0.1"

# Errors
eyre = "0.6"
color-eyre = "0.6"

chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
serde = { version = "1", features = ["derive"] }
redact = "0.1"
simd-json = "0.14"
url = "2"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
typed-builder = "0.18"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
rust_decimal_macros = "1"
rust_decimal = { version = "1", features = ["maths"] }
arrayvec = "0.7"
itertools = "0.13"
base64 = "0.22"
hyper-util = { version = "0.1.0", features = ["tokio"] }
http-body-util = { version = "0.1.0" }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false }
rustls-native-certs = "0.8"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1", features = ["http1", "client"] }
fastwebsockets = { version = "0.8", features = ["upgrade"] }

# Tests
rstest = "0.23"
test-log = { version = "0.2", features = ["trace"], default-features = false }
pretty_assertions = "1"
assert_matches = "1"
mockito = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "tracing-log", "json", "valuable", "tracing"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
# codegen-backend = "cranelift" (not supported on m1 mac)
