[package]
name = "xtask"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
xshell.workspace = true
eyre = "0.6"
color-eyre = "0.6"
