[package]
name = "examples"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
publish = false

[dependencies]
clap.workspace = true
color-eyre.workspace = true
rp-supabase-realtime.workspace = true
rp-supabase-auth.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
simd-json.workspace = true
rp-supabase-client.workspace = true

[lints]
workspace = true

[[bin]]
name = "realtime-example"
path = "src/realtime_example.rs"

[[bin]]
name = "client-example"
path = "src/client_example.rs"

[[bin]]
name = "jwt-stream-example"
path = "src/jwt_stream_example.rs"

[[bin]]
name = "auth-example"
path = "src/auth_example.rs"
