[package]
name = "supabase-auth"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
redact.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
jwt-simple.workspace = true
futures.workspace = true
serde.workspace = true
simd-json.workspace = true
pin-project.workspace = true
futures-timer.workspace = true
thiserror.workspace = true
base64.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
mockito.workspace = true
supabase-mock.workspace = true
pretty_assertions.workspace = true
