[package]
name = "supabase-auth"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
redact.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
simd-json.workspace = true
thiserror.workspace = true
tracing.workspace = true
typed-builder.workspace = true
chrono.workspace = true

[dev-dependencies]
rstest.workspace = true
test-log.workspace = true
tracing-subscriber.workspace = true
mockito.workspace = true
supabase-mock.workspace = true
pretty_assertions.workspace = true
