[package]
name = "supabase-client"
version = "0.1.0"
edition = "2021"

[dependencies]
postgrest.workspace = true
tracing.workspace = true
postgrest-error.workspace = true
thiserror.workspace = true
serde.workspace = true
simd-json.workspace = true
futures.workspace = true
supabase-auth.workspace = true

[lints]
workspace = true
