[package]
name = "rp-supabase-mock"
version.workspace = true
description = """
Mock client for supabase auth module, useful for tests
"""
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
mockito.workspace = true
jwt-simple.workspace = true
simd-json.workspace = true
thiserror.workspace = true
base64.workspace = true
url.workspace = true

[lints]
workspace = true
