[package]
name = "supabase-realtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
http-body-util.workspace = true
hyper.workspace = true
url.workspace = true
rustls.workspace = true
bytes.workspace = true
hyper-util.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
thiserror.workspace = true
tracing.workspace = true
fastwebsockets = { workspace = true, features = ["unstable-split"] }
supabase-auth.workspace = true
futures.workspace = true
simd-json.workspace = true
serde.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
test-log.workspace = true
rstest.workspace = true
tracing-subscriber.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
